test/Errors/unification_failure.elab
Theorem bad_unify : Prop -> Prop := fun x : Type => x